--- a/index.css
+++ b/index.css
@@ -17,15 +17,12 @@
 body {
   background-color: #2a2c2f;
   color: #ffffff;
-  font-family: Inter;
-
-
+  font-family: "Inter";
 }
 
 header {
   display: flex;
-  align-items: center;
-
+  justify-content: center;
 }
 
 .page {
@@ -33,52 +30,104 @@ header {
 }
 
 .header__logo {
-  width: 254.84px;
-  height: 68.94px;
+  width: 100%;
+  max-width: 254px;
   margin-top: 34px;
-  margin-left: 513px;
-  padding: 0px;
-  gap: 22px;
-  opacity: 0px;
 }
 
 .informacion {
   display: flex;
   flex-direction: column;
-  top: 194px;
-  left: 148px;
+  align-items: center;
+  text-align: center;
+  width: 100%; 
 }
 
 .informacion__introduccion {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; 
+  width: 100%;
 }
 
 .informacion__title {
-  width: 720px;
-  height: 200px;
+  max-width: 720px;
+  width: 100%;
   font-size: 96px;
   font-weight: 900;
   line-height: 100px;
-  text-align: center;
+ 
 }
 
-  .informacion__subtitle {
-    width: 720px;
-    height: 72px;
-    top: 426px;
-    left: 280px;
-    font-family: Inter;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 36px;
-    text-align: center
-  }
+.informacion__subtitle {
+  max-width: 720px;
+  width: 100%;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+}
 
-  .informacion__image {
-    width: 984px;
-    height: 615px;
-    top: 562px;
-    left: 148px;
+.informacion__image {
+  width: 100%;
+  max-width: 984px;
+  max-height: 615px;
+}
+
+.lugares {
+display:flex ;  
+flex-direction: column;
+max-width: 984px;
+  margin: auto;
+  
+}
+
+.lugares__title {
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 58px;
+  text-align: left;
+}
+.lugares__introduccion {
+  max-width: 738px;
+  width: 100%;
+  top: 1482.91px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  text-align: left;
+}
+
+.lugares__autor {
+  max-width: 732px;
+  width: 100%;
+  top: 1628.56px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  text-align: right;
+}
+.lugares__texto {
+  max-width: 722px;
+  width: 100%;
+  top: 1694.46px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26.08px;
+  text-align: left;
+}
+
+.footer__autor{
+  margin: auto;
+  max-width: 194px;
+height: 16px;
+margin-top:92px;
+font-size: 14px;
+font-weight: 400;
+line-height: 16px;
+text-align: right;
+}
+/* @media (max-width:800px) {
+  header{
+    background-color: blue;
   }
+} */
