--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,19 +1,28 @@
+.header {
+  max-width: 100%;
+}
 .header__logo {
-    width: 100%;
-    max-width: 255px;
-    margin-top: 34px;
+  width: 100%;
+  max-width: 255px;
+  margin-top: 34px;
+}
 
-    @media (max-width: 768px){
-      max-width: 254px;
-    }
-      
-    
+@media screen and (max-width: 768px) {
+  .header {
+    max-width: 768px;
   }
+  .header__logo {
+    max-width: 254px;
+    margin-top: 30px;
+  }
+}
 
-/*   @media screen and (max-width: 768px) {
-    .header__logo {
-      max-width: 254px;
-    }
+@media screen and (max-width: 320px) {
+  .header{
+    max-width: 320px;
   }
-     */
-  
+  .header__logo {
+    max-width: 188px;
+    margin-top: 20px;
+  }
+}
