--- a/blocks/informacion.css
+++ b/blocks/informacion.css
@@ -1,37 +1,69 @@
 .informacion {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 100%; 
-  }
-  
-  .informacion__introduccion {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    width: 100%;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.informacion__introduccion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.informacion__title {
+  max-width: 720px;
+  width: 100%;
+  font-size: 96px;
+  font-weight: 900;
+  line-height: 100px;
+}
+
+.informacion__subtitle {
+  max-width: 720px;
+  width: 100%;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+}
+
+.informacion__image {
+  width: 100%;
+  max-width: 984px;
+  max-height: 615px;
+}
+@media screen and (max-width: 768px) {
   .informacion__title {
-    max-width: 720px;
-    width: 100%;
-    font-size: 96px;
-    font-weight: 900;
-    line-height: 100px;
-   
+    max-width: 7530px;
+    font-size: 75px;
+    line-height: 79px;
   }
-  
   .informacion__subtitle {
-    max-width: 720px;
-    width: 100%;
     font-size: 30px;
     font-weight: 400;
     line-height: 36px;
+    max-width: 720px;
+    font-size: 30px;
   }
-  
   .informacion__image {
-    width: 100%;
-    max-width: 984px;
-    max-height: 615px;
+    max-height: 480px;
+    max-width: 768px;
   }
+}
+
+@media screen and (max-width: 320px) {
+  .informacion__title {
+    font-size: 40px;
+    line-height: 44px;
+  }
+  .informacion__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .informacion__image {
+    max-width: 320px;
+    max-height: 200px;
+  }
+}
