--- a/blocks/lugares.css
+++ b/blocks/lugares.css
@@ -1,43 +1,117 @@
 .lugares {
-    display:flex ;  
-    flex-direction: column;
-    max-width: 984px;
-      margin: auto;
-      
-    }
-    
-    .lugares__title {
-      font-size: 54px;
-      font-weight: 900;
-      line-height: 58px;
-      text-align: left;
-    }
-    .lugares__introduccion {
-      max-width: 738px;
-      width: 100%;
-      top: 1482.91px;
-      font-size: 24px;
-      font-weight: 400;
-      line-height: 34px;
-      text-align: left;
-    }
-    
-    .lugares__autor {
-      max-width: 732px;
-      width: 100%;
-      top: 1628.56px;
-      font-size: 24px;
-      font-weight: 400;
-      line-height: 34px;
-      text-align: right;
-    }
-    .lugares__texto {
-      max-width: 722px;
-      width: 100%;
-      top: 1694.46px;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 26.08px;
-      text-align: left;
-    }
-    
+  display: flex;
+  flex-direction: column;
+  max-width: 984px;
+  width: 100%;
+  margin: auto;
+}
+.lugares__contenedor {
+  width: 100%;
+  max-width: 984px;
+}
+
+.lugares__title {
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 58px;
+  width: 100%;
+  max-width: 830px;
+  text-align: left;
+}
+.lugares__introduccion {
+  max-width: 738px;
+  width: 100%;
+  top: 1483px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  text-align: left;
+}
+
+.lugares__autor {
+  max-width: 732px;
+  width: 100%;
+  top: 1628px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  text-align: right;
+}
+.lugares__texto {
+  max-width: 722px;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26.08px;
+  text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .lugares {
+    box-sizing: border-box;
+    padding: 0 24px;
+  }
+  .lugares__contenedor {
+    max-width: 768px;
+    width: 100%;
+  }
+  .lugares__title {
+    max-width: 707px;
+    font-size: 45px;
+    line-height: 49px;
+  }
+  .lugares__introduccion {
+    font-size: 24px;
+    line-height: 34px;
+    max-width: 720px;
+  }
+  .lugares__autor {
+    max-width: 720px;
+    font-size: 24px;
+    line-height: 34px;
+  }
+  .lugares__texto {
+    max-width: 720px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .lugares{
+    margin-top: 64px;
+box-sizing: border-box;
+padding: 0 16px;
+  }
+  .lugares__contenedor{
+    max-width: 320px;
+   width: 100%;
+
+  }
+.lugares__title{
+  max-width: 288px;
+font-size: 32px;
+line-height: 35px;
+
+
+}
+.lugares__introduccion{
+  margin-top: 40px;
+  font-size: 24px;
+  line-height: 30px;
+ 
+}
+.lugares__autor{
+font-size: 24px;
+line-height: 34px;
+
+
+}
+.lugares__texto{
+  margin-top: 32px;
+font-size: 16px;
+line-height: 26px;
+
+
+}
+} 
