--- a/pages/index.css
+++ b/pages/index.css
@@ -9,42 +9,116 @@
 @import url(./../blocks/body.css);
 
 .gallery {
-  /*   width: 100%;*/
   margin-top: 118px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
-  max-height: 442px;
+  max-width: 1184px;
+  width: 100%;
 }
+@media screen and (max-width: 768px) {
+  .gallery {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .gallery {
+    max-width: 288px;
+  }
+}
+
+.gallery__images {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+@media screen and (max-width: 768px) {
+  .gallery__images {
+    width: 352px;
+    height: 264px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .gallery__images {
+    mwidth: 288px;
+    height: 216px;
+  }
+}
+
 .container {
   width: 100%;
   max-width: 987px;
-  max-height: 3367px;
   margin-top: 88px;
+}
+@media screen and (max-width: 768px) {
+  .container {
+    /*     width: 100%;
+ */
+    width: 720px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .container {
+    width: 100%;
+  }
 }
 
 .place {
+  grid-template-areas: "title artist" "image description" "botton description";
+  grid-template-rows: auto auto 1fr;
   display: grid;
   column-gap: 40px;
   row-gap: 48px;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 460px 1fr;
   max-width: 984px;
-  max-height: 756px;
+  width: 100%;
+  margin-bottom: 80px;
+}
+@media screen and (max-width: 768px) {
+  .place {
+    width: 720px;
+    grid-template-columns: auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    width: 100%;
+    grid-template-areas: "title" "artist" "image" "description" "botton";
+  }
 }
 
 .place__tilte {
-  margin-top: auto;
+  grid-area: title;
+  margin: 0px;
+  align-self: flex-end;
   max-width: 460px;
-  max-height: 152px;
-  display: grid;
-  justify-self: stretch;
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
   text-align: left;
 }
+@media screen and (max-width: 768px) {
+  .place__tilte {
+    font-size: 42px;
+    line-height: 46px;
+    width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__tilte {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
 .place__escritores {
-  margin-top: 85px;
+  grid-area: artist;
+  align-self: flex-end;
 }
 
 .place__artista {
@@ -55,6 +129,7 @@
   letter-spacing: 0.12em;
   text-align: left;
 }
+
 .place__autor {
   margin: 0;
   font-size: 18px;
@@ -64,21 +139,64 @@
 }
 
 .place__image {
-  max-width: 340px;
-  max-height: 340px;
-  height: 100%;
+  grid-area: image;
+  display: block;
   width: 100%;
+  object-fit: cover;
+  aspect-ratio: 1;
+  box-shadow: 10px 10px 25px 0px #00000080;
+}
+.place__image:hover {
+  /*   box-shadow: 10px 10px 25px 0px #00000080;
+ */
+  opacity: 0.5;
 }
 
-.place__texto {
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    width: 340px;
+    height: 340px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .place__image {
+    width: 320px;
+    height: 320px;
+  }
+}
+
+/* continuar mq 
+ */.place__texto {
+  grid-area: description;
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 29px;
   text-align: left;
 }
-place__boton {
+@media screen and (max-width: 768px) {
+  .place__texto {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+
+.place__boton {
+  height: fit-content;
+  border: 0;
+  color: white;
+  grid-area: botton;
+  justify-self: start;
   font-size: 18px;
   font-weight: 600;
   line-height: 22px;
   text-align: left;
+  border-radius: 4px;
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+  padding: 13px 20px;
+}
+.place__boton:hover {
+  /*   box-shadow:linear-gradient(5px 5px 10px 0px #00000040);
+ */
+  opacity: 0.5;
 }
