--- a/blocks/place.css
+++ b/blocks/place.css
@@ -130,8 +130,8 @@
   padding: 13px 20px;
 }
 .place__boton:hover {
-  /*   box-shadow:linear-gradient(5px 5px 10px 0px #00000040);
-   */
+  box-shadow:linear-gradient(5px 5px 10px 0px #00000040);
+
   opacity: 0.5;
 }
 @media screen and (max-width: 320px) {
