--- a/blocks/place.css
+++ b/blocks/place.css
@@ -126,11 +126,12 @@
   line-height: 22px;
   text-align: left;
   border-radius: 4px;
-  background: linear-gradient(90deg, #0278fe 0%, #003a7b40 99.98%);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%); 
   padding: 13px 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 }
 .place__boton:hover {
-  box-shadow:linear-gradient(5px 5px 10px 0px #00000040);
+  background: linear-gradient(90deg, rgba(2, 120, 254, 0.25) 0%, rgba(0, 58, 123, 0.25) 99.98%);
 
 }
 @media screen and (max-width: 320px) {
